fix: table overflow

--- a/src/acmManager.Web.Mvc/wwwroot/view-resources/Views/Admin/Admin.css
+++ b/src/acmManager.Web.Mvc/wwwroot/view-resources/Views/Admin/Admin.css
@@ -1,3 +1,3 @@
 ﻿.input-group-text {
-    min-width: 150px;
+    min-width: 100px;
 }
